tests/e2e/keywords/else_is_keyword.error
Error: syntax error in story at line 1, column 1

1|    else = 1
      ^^^^

E0020: `else` is a reserved keyword
